Criando a página postDetails.html buscando o post pelo id

--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+
+<html xmlns:th="http://thymeleaf.org">
 
 <head>
 <title>BlogCodeTec</title>
@@ -29,9 +31,29 @@
 				</ol>
 			</nav>
 
-			<div class="card text-danger bg-dark mb-3"
-				style="max-width: 60rem; margin-top: 20px;">
-				<div class="card-body">teste</div>
+			<div class="card text-danger bg-dark mb-3" style="max-width: 60rem; margin-top: 20px;" th:each="post : ${posts}">
+				<div class="card-body">
+					
+					<p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem">
+						<!-- Data e Autor do post -->
+						<span th:text="${post.autor}"></span>
+						<span th:text="${post.data}"></span>
+					</p>
+					
+					<a href="#">
+						<h4 class="card-title" style="font-weight: bold; color: dange; padding-top: 5px;">
+							
+							<span th:text="${post.titulo}"></span>
+						
+						</h4>
+					</a>
+					
+					<p class="card-text">
+						<!-- breve texto. os primeiros 400 caracteres -->
+						<span th:utext="${#strings.abbreviate(post.texto,400)}"></span>
+					</p>
+					
+				</div>
 			</div>
 
 		</div>
