--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -40,7 +40,7 @@
 						<span th:text="${post.data}"></span>
 					</p>
 					
-					<a href="#">
+					<a th:href="${(#mvc.url('PC#getPostDetails').arg(0, post.id)).build()}">
 						<h4 class="card-title" style="font-weight: bold; color: dange; padding-top: 5px;">
 							
 							<span th:text="${post.titulo}"></span>
