--- a/src/main/resources/templates/postDetails.html
+++ b/src/main/resources/templates/postDetails.html
@@ -3,6 +3,7 @@
 <html xmlns:th="http://thymeleaf.org">
 
 <head>
+<meta charset="UTF-8">
 <title>BlogCodeTec</title>
 
 <!--Import Google Icon Font-->
