Inserindo validação dos campos e melhorando o layout do campo textarea com summernote

--- a/src/main/resources/templates/postDetails.html
+++ b/src/main/resources/templates/postDetails.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://thymeleaf.org">
+<html lang="pt" xmlns:th="http://thymeleaf.org"
+	xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta charset="UTF-8">
