Corrigindo alguns bugs

--- a/src/main/resources/templates/postDetails.html
+++ b/src/main/resources/templates/postDetails.html
@@ -21,7 +21,7 @@
 <body>
 
 	<header>
-		<nav class="navbar navbar-light bg-light">
+		<nav class="navbar navbar-light" style="background-color: #CD5C5C;">
 			<div class="container-fluid">
 				<span class="navbar-brand mb-0 h1" style="font-weight: bold;">BlogCodeTec</span>
 			</div>
@@ -33,7 +33,7 @@
 
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb"
-					style="background-color: white; padding-left: 0px; font-weight: 600;">
+					style="background-color: white; padding-left: 0px; font-weight: 600; margin-top: 10px;">
 					
 					<li class="breadcrumb-item" aria-current="page"><a href="/posts">Posts</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Post</li>
