--- a/src/main/resources/templates/postForm.html
+++ b/src/main/resources/templates/postForm.html
@@ -28,7 +28,7 @@
 <body>
 
 	<header>
-		<nav class="navbar navbar-light bg-light">
+		<nav class="navbar navbar-light" style="background-color: #CD5C5C;">
 			<div class="container-fluid">
 				<span class="navbar-brand mb-0 h1" style="font-weight: bold;">BlogCodeTec</span>
 			</div>
@@ -39,7 +39,7 @@
 		<div class="container" style="width: 70%; padding-bottom: 30px">
 
 			<nav aria-label="breadcrumb">
-				<ol class="breadcrumb" style="background-color: white; padding-left: 0px; font-weight: 600;">
+				<ol class="breadcrumb" style="background-color: white; padding-left: 0px; font-weight: 600; margin-top: 10px;">
 					<li class="breadcrumb-item" aria-current="page"><a href="/posts">Posts</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Novo Post</li>
 				</ol>
@@ -72,7 +72,7 @@
 		</div>	
 	</section>
 	
-	<script type="text/javascript">
+	<script>
 
 		$('#summernote').summernote({
 			placeholder: 'Texto *',
